# STM32-CMake-Blinky

./: .gitignore  CMakeLists.txt
app/inc/: LED.h
app/src/: LED.c  main.c
cmake/: arm-none-eabi-gcc.cmake  stm32-postbuild.cmake
libraries/: CMakeLists.txt
libraries/CMSIS/: CMakeLists.txt
libraries/STM32F3xx_HAL/: CMakeLists.txt
